--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=loan-calculator
-spring.datasource.url=jdbc:mysql://localhos:3306/loan_calculator
+spring.datasource.url=jdbc:mysql://localhost:3306/loan_calculator
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
