error logging added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 management.health.db.enabled=true
+logging.file.name=logs/loan-calculator.log
+logging.level.com.leanpay.loan_calculator=DEBUG
